[gd_scene load_steps=40 format=2]

[ext_resource path="res://Assets/Sprites/Npcs/Soul8.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Npcs/Soul2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Npcs/Soul4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Npcs/Soul3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Npcs/Soul6.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Npcs/Soul1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Npcs/Soul7.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Npcs/Soul5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Npcs/Soul9.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Npc.gd" type="Script" id=10]
[ext_resource path="res://Assets/Sprites/DialogBox.png" type="Texture" id=11]
[ext_resource path="res://Assets/Fonts/upheavtt.ttf" type="DynamicFontData" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5, 25 )

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 80, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 80, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 80, 90 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 80, 90 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "New Anim 7",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "New Anim 8",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "New Anim 3",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "New Anim 4",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "New Anim 6",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "New Anim 1",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "New Anim 5",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "New Anim 2",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=23]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=24]
blend_mode = 1

[sub_resource type="DynamicFont" id=25]
size = 48
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=26]
resource_name = "hide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[node name="Npc" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 16384
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -25 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -20 )
shape = SubResource( 2 )

[node name="Flip" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Flip"]
material = SubResource( 3 )
position = Vector2( 0, -45 )
frames = SubResource( 22 )
animation = "New Anim"
frame = 1
playing = true

[node name="Side" type="RayCast2D" parent="Flip"]
position = Vector2( 15, -20 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 1024

[node name="Cliff" type="RayCast2D" parent="Flip"]
position = Vector2( 35, -20 )
enabled = true
cast_to = Vector2( 0, 120 )
collision_mask = 1024

[node name="Jumpside" type="RayCast2D" parent="Flip"]
position = Vector2( 15, -20 )
enabled = true
cast_to = Vector2( 60, 0 )
collision_mask = 1024

[node name="Jumpup" type="RayCast2D" parent="Flip"]
position = Vector2( 15, -100 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 1024

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 1e-05, 1e-05 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
material = SubResource( 23 )
margin_left = -479.655
margin_top = -489.183
margin_right = 490.345
margin_bottom = 120.817
rect_scale = Vector2( 1, 0.6 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
material = SubResource( 24 )
margin_left = -403.953
margin_top = -457.938
margin_right = 394.047
margin_bottom = -169.938
custom_fonts/font = SubResource( 25 )
custom_colors/font_color = Color( 0.639216, 0.901961, 0.835294, 1 )
text = "Hello this is a test"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/hide = SubResource( 26 )
anims/show = SubResource( 27 )

[node name="BehaivorChangeTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="StartWalkingAgainTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="BehaivorChangeTimer" to="." method="_on_BehaivorChangeTimer_timeout"]
[connection signal="timeout" from="StartWalkingAgainTimer" to="." method="_on_StartWalkingAgainTimer_timeout"]
